<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nbhirud.pizzastore.MainActivity">

    <TableLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/trow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"/>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1">

        <TableRow
            android:id="@+id/trow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"/>
    </TableLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewPizza"
        android:src="@drawable/pizza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/pizza_label" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_load_label"
        android:id="@+id/checkBoxLoadPrev"
        android:longClickable="true"
        android:textSize="20sp"
        android:layout_below="@+id/imageViewPizza"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_Delivery"
        android:id="@+id/checkBoxDelivery"
        android:longClickable="true"
        android:textSize="20sp"
        android:layout_below="@+id/checkBoxLoadPrev"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_below="@+id/checkBoxDelivery"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonCheckout"
        android:id="@+id/linerLayout"
        android:visibility="visible"
        android:layout_below="@+id/progressBar">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button_add_label"
            android:id="@+id/buttonAdd"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/button_clear_label"
            android:id="@+id/buttonClear"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_checkout_label"
        android:id="@+id/buttonCheckout"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linerLayout"
        android:textSize="22sp" />

</RelativeLayout>
